[tool.poetry]
name = "rewrite"
version = "0.0.0"  # This will be replaced by the GitHub Actions workflow
description = "OpenRewrite is a mass automated refactoring engine."
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite" }
]

[tool.poetry.dependencies]
python = "~3.12"
rewrite-remote = { path = "../../../moderneinc/rewrite-remote/python/rewrite-remote", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"