[tool.poetry]
name = "openrewrite"
version = "0.0.0"  # This will be replaced by the GitHub Actions workflow
description = "OpenRewrite is a mass automated refactoring engine."
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite" }
]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = "^8.3.2"
more-itertools = "^10.4.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.18.0"
#openrewrite-remote = { path = "../../../moderneinc/rewrite-remote/python/rewrite-remote", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"