[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrewrite"
description = "OpenRewrite is a mass automated refactoring engine."
version = "0.0.0" # Updated dynamically during release
authors = [{ name = "Moderne Inc.", email = "support@moderne.io" }]
license = { text = "Moderne, Inc. Commercial License" }
dependencies = [
    "pytest>=8.3.4",
    "more-itertools>=10.4.0",
    "openrewrite-remote",
    "pip>=24.3.1",
    "pypi-simple>=1.6.1",
]
requires-python = ">=3.9, <4"

[tool.setuptools.packages.find]
include = ["rewrite"]
exclude = []

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "mypy==1.13.0",
    "poethepoet==0.31.1",
    "black==24.10.0",
    "pylint==3.3.2",
]

[tool.poe.tasks]
check-types = "mypy ./rewrite"
format = "black ./rewrite ./tests"
test = "pytest"
lint = "pylint ./rewrite/**/*.py ./tests/**/*.py"
