[tool.poetry]
name = "rewrite-core"
version = "0.0.0-dev"  # This will be replaced by the GitHub Actions workflow
description = "Core functionality for the OpenRewrite library"
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
poethepoet = "^0.27.0"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true

warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.poe.tasks]
check-types = "mypy src"
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"