[tool.poetry]
name = "rewrite-json"
version = "0.0.0"  # This will be replaced by the GitHub Actions workflow
description = "JSON functionality for the OpenRewrite library"
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite/json", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
rewrite-core = { path = "../rewrite-core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"