[tool.poetry]
name = "rewrite-python"
version = "0.0.0-dev"  # This will be replaced by the GitHub Actions workflow
description = "Python functionality for the OpenRewrite library"
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite/python", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
rewrite-core = { path = "../rewrite-core", develop = true }
rewrite-java = { path = "../rewrite-java", develop = true }
mypy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"