[tool.poetry]
name = "rewrite-yaml"
version = "0.1.0"
description = "YAML functionality for the OpenRewrite library"
authors = ["Moderne Inc. <support@moderne.io>"]
license = "Apache-2.0"
packages = [
    { include = "rewrite/yaml", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
rewrite-core = { path = "../rewrite-core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"